--- a/config
+++ b/config
@@ -1,4 +1,4 @@
-# Linux/x86 6.9.5 Kernel Configuration
+# Linux/x86 6.9.9 Kernel Configuration
 #
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_ZSTD=y
@@ -66,12 +66,13 @@ CONFIG_CMDLINE="loglevel=2 root=PARTLABEL=root tsc=reliable"
 # CONFIG_ACPI_REV_OVERRIDE_POSSIBLE is not set
 # CONFIG_ACPI_AC is not set
 # CONFIG_ACPI_BATTERY is not set
+# CONFIG_ACPI_BUTTON is not set
+CONFIG_ACPI_TINY_POWER_BUTTON=y
+CONFIG_ACPI_TINY_POWER_BUTTON_SIGNAL=15
 # CONFIG_ACPI_TABLE_UPGRADE is not set
 CONFIG_ACPI_BGRT=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_X86_ACPI_CPUFREQ=y
 # CONFIG_X86_ACPI_CPUFREQ_CPB is not set
-CONFIG_X86_AMD_FREQ_SENSITIVITY=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_PCI_MMCONFIG is not set
 # CONFIG_ISA_DMA_API is not set
@@ -86,6 +87,7 @@ CONFIG_MODPROBE_PATH="/bin/modprobe"
 # CONFIG_BLOCK_LEGACY_AUTOLOAD is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
+CONFIG_IOSCHED_BFQ=y
 CONFIG_BINFMT_MISC=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
@@ -257,10 +259,6 @@ CONFIG_USB_STORAGE=y
 CONFIG_USB_UAS=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_FTDI_SIO=y
-CONFIG_MMC=y
-CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_PCI=y
-# CONFIG_MMC_RICOH_MMC is not set
 CONFIG_EDAC=y
 # CONFIG_EDAC_LEGACY_SYSFS is not set
 CONFIG_EDAC_AMD64=y
